# classificacao_binaria_b3

./: Certificado de Depósito Interbancário de 1 dia Futuros Futuros - Dados Históricos.csv  Dados Históricos - Mini Ibovespa Futuros.csv  README.md  USD_BRL Historical Data.csv  main.py  pyproject.toml
data/: base_concatenada.csv  base_consolidada_completa_winfut_macro_eventos.csv  base_win_features_selecionadas.csv  base_win_tratada_final.csv  dados_macro_commodities.csv  datas_eventos_brasil.csv  datas_eventos_g6_eua.csv  datas_eventos_restantes_g6.csv  features_curadas_v2.csv  ipca.csv  minerio_ferro_futuros.csv  pib.csv  selic.csv
data/backup_originais/: Dados Históricos - Minério de ferro refinado 62% Fe CFR Futuros.csv  IPCA.csv  Selic.csv  dados_macro_commodities.csv  datas_eventos_brasil.csv  datas_eventos_g6_eua.csv  datas_eventos_restantes_g6.csv  pib.csv
docs/: dicionario_base_consolidada_completa.csv  dicionario_dados.md  plano_mestre_WIN.md  plano_mestre_WIN_v2.md  relatorio_features_win.md
outputs/models/: anomaly_detector_calibration.pkl  dvae_backbone.pt  feature_cols.json  scaler.pkl
outputs/reports/: dvae_metrics.json  feature_selection_report.json  produto3_resultados.csv  produto3_validacao.json
scripts/: analise_features_win.py  baixar_eventos_brasil.py  baixar_eventos_eua.py  baixar_macro_commodities.py  run_produto3.py  train_autoencoder.py
src/: __init__.py
src/data/: __init__.py  data_loader.py  feature_selection.py
src/models/: __init__.py  autoencoder.py  mdn.py
src/products/: __init__.py  anomaly_detector.py  (+2 more)
