[project]
name = "classificacao-binaria-b3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "pyfredapi>=0.6.0",
    "python-bcb>=0.3.6",
    "python-dotenv>=1.2.2",
    "yfinance>=1.3.0",
    "torch>=2.0",
    "scikit-learn>=1.5",
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "xgboost>=2.0",
    "umap-learn>=0.5",
]
